# configerelle

./: README.md  mkdocs.yml  pyproject.toml
configerelle/: cli.py
configerelle/configuration/: attrs_base.py  base.py  exceptions.py  logic.py
configerelle/configuration/interpretation/: abstration.py  binder.py  interpreter_nav.py  interpreter_re.py
configerelle/expr/: diter.py  example.txt  expr.g4  expr_data.py  expr_test.g4  handling.py  listener.py  listener_direct.py  other_test.g4  test.g4
configerelle/sanity/: namespace.py
configerelle/utils/: navigator.py
docs/: about.md  index.md
tests/_data_/single/: jess.json5  jess.kdl  jess.yml
tests/configuration/: ali.py  cass.py  jess.py  test_base.py
tests/configuration/interpretation/: test_binder.py
tests/configuration/interpreter/: test_io.py
tests/multiple/: test_linked.py
tests/single/: test_file.py  test_single.py
tests/utils/navigator/: test_assignment.py  test_navigation.py
